--- a/web/index/css/frontStyle.css
+++ b/web/index/css/frontStyle.css
@@ -10,15 +10,36 @@ header .menu li a{ color: #ffffff; font-size: 18px; font-weight: bold; padding: 
 header .menu .check{ border-bottom:  1px solid #C9B010; }
 header .menu li a:hover {color: #C9B010;}
 header .user {float:  right;}
-header .user li{margin: 10px 5px;}
-header .user .update,header .user .login{background: #C9B010; height: 40px; line-height: 40px; text-align: center ;}
+header .user li{margin: 10px 5px 0 5px;}
+header .user .update,header .user .login,header .user .personal_g{background: #C9B010; height: 40px; line-height: 40px; text-align: center ;}
+header .user .personal_g {width:40px;}
+header .user .personal_g img{width:100%;}
+header .user .down{   
+	width:0;
+	height:0;
+	margin-top:25px;
+	margin-left:5px;
+	display:inline-block;	
+	border-right: 7px solid transparent;
+    border-bottom: 7px solid #fff;
+    border-left: 7px solid transparent;}
 header .user .login{padding: 0 30px;}
 header .user .update  a { padding: 0 50px; background:  url(../images/icon/icon.png) 30px 0 no-repeat; }
 header .user .update  a,header .user .login a { color: #ffffff; font-size: 16px; font-weight: bold;} 
+header  .profile{ display: none; background: #ffffff; width: 160px; height: 160px; padding: 10px 0; position: absolute;  clear: both; right: 3%; top:80px;
+	border: 1px solid #ccc; box-shadow: 1px 1px 2px #999 ; border-radius: 5px;  color: #999; 
+ }
+
+header  .profile li {height: 30px; line-height: 30px;  cursor: pointer;
+}
+header  .profile li a{ color: #999; width: 100%; display: inline-block; text-indent: 20px;  letter-spacing: 1px;}
+header  .profile li a:hover{background: #61A2DF;color: #ffffff}
+ header  .profile .name{font-weight: bold; color: #999}
+ header  .profile .name_c{border-bottom: 1px solid #ccc; margin-bottom: 10px;}
 
 nav { background:#3C3C3A ; height: 50px; line-height: 50px; padding: 0 3%;width: 100% ; box-shadow: 2px 2px 10px;}
 nav a{ padding: 0 10px; color: #ffffff; font-size: 16px;  font-weight:  bold;}
 nav a:hover{ color: #C9B010 }
-nav .serach{float: right;margin-right: 100px;}
+nav .serach{float: right;margin-right: -100px;}
 
 
