--- a/web/index/css/login.css
+++ b/web/index/css/login.css
@@ -1,11 +1,11 @@
 @CHARSET "UTF-8";
 body{font-size:14px;background:url(../images/56a46b7590f5672af5b8.jpg) fixed center center}
-.back a{ color:#fff; font-size:20px; height: 40px;display: inline-block; line-height: 40px; margin-top: 10px; text-indent: 20px; width: 120px;}
-.logo_box{width:280px;height:490px;padding:35px;color:#EEE;position:absolute;left:50%;top:100px;margin-left:-175px}
+.back a{ color:#fff; font-size:16px; height: 30px;display: inline-block; line-height: 30px; margin-top: 10px; text-indent: 20px; width: 120px;}
+.logo_box{width:280px;height:490px;padding:35px;color:#EEE;position:absolute;left:50%;top:20px;margin-left:-175px}
 .logo_box h3{text-align:center; height:20px;font:26px "microsoft yahei",Helvetica,Tahoma,Arial,"Microsoft jhengHei",sans-serif;color:#FFF;height:20px;line-height:20px;padding:0 0 35px 0}
 .forms{width:280px;height:485px}
 .logon_inof{width:100%;min-height:450px;padding-top:35px;position:relative}
-.input_outer{height:50px;padding:0 5px;margin-bottom:35px;border-radius:50px;position:relative;border:rgba(255,255,255,.2) 2px solid!important}
+.input_outer{height:50px;padding:0 5px;margin-bottom:25px;border-radius:50px;position:relative;border:rgba(255,255,255,.2) 2px solid!important}
 .u_user{width:25px;height:25px;background:url(../images/login_ico.png);background-position:-125px 0;position:absolute;margin:12px 13px}
 .us_uer{width:25px;height:25px;background-image:url(../images/login_ico.png);background-position:-125px -34px;position:absolute;margin:12px 13px}
 .l-login{position:absolute;z-index:1;left:50px;top:0;height:46px;font:14px "microsoft yahei",Helvetica,Tahoma,Arial,"Microsoft jhengHei";line-height:46px}
@@ -13,7 +13,7 @@ label{color:#fff;display:block}
 .text{width:220px;height:46px;outline:0;display:inline-block;font:14px "microsoft yahei",Helvetica,Tahoma,Arial,"Microsoft jhengHei";margin-left:50px;border:none;background:0 0;line-height:46px}
 .mb2{margin-bottom:20px}
 .mb2 a{text-decoration:none;outline:0}
-.submit{padding:15px;margin-top:20px;display:block;color: #FFFFFF;border-radius:50px; background:#0096e6;width:280px;font-size:20px;font-weight:bold; letter-spacing: 1px; cursor: pointer;}
+.submit{padding:15px;margin-top:2px;display:block;color: #FFFFFF;border-radius:50px; background:#0096e6;width:280px;font-size:20px;font-weight:bold; letter-spacing: 1px; cursor: pointer;}
 .submit:hover{background: #1E8CC7}
 .act-but{height:20px;line-height:20px;text-align:center;font-size:20px;border-radius:50px;background:#0096e6}
 .check{width:280px;height:22px}
@@ -31,3 +31,12 @@ label{color:#fff;display:block}
 .sas{width:280px;height:18px;float:left;color:#FFF;text-align:center;font-size:16px;line-height:16px;margin-bottom:50px}
 .sas a{width:280px;height:18px;color:#FFF;text-align:center;line-height:18px;text-decoration:none}
 .sas a:hover{ color:#FF8E3B}
+
+/*登陆修改*/
+.col-xs-6{ width: 125px; height: 30px;float: left; margin-right: 5px;}
+.col-xs-6 input{height: 30px; border: 1px solid #ccc; border-radius: 5px; width: 100%; text-indent: 10px; font-size: 16px; font-weight: bold;}
+.col-xs-6 input:focus{box-shadow:inset 1px 0px 4px #F7CB31}
+.col-xs-6  img{width: 90%}
+.form-group{ height: 40px;}
+.help-block-error{color:red; display: block;clear: both;}
+.field-loginform-captcha{height: 50px; padding-left: 10px;}
