--- a/web/index/css/personal.css
+++ b/web/index/css/personal.css
@@ -1,5 +1,4 @@
 @CHARSET "UTF-8";
-
 body{ background: url(../images/bg.jpg) fixed center center; background-size: 100%;}
 .main_per{width: 94%; margin: 0 3%; clear:both; height: 270px; background-color: #343434; z-index: -999; position: absolute;}
 .img_sign {background: url(../images/per_bg.jpeg) no-repeat ; background-size: 100%; height: 220px;}
@@ -17,7 +16,7 @@ body{ background: url(../images/bg.jpg) fixed center center; background-size: 10
 .edit:hover{ background-color: #5E5E5E;color: #ffffff;};
 .edit a:hover{color: #ffffff !important}
 
-.main_info{width: 100%;  height: 1000px; background: #ffffff;}
+.main_info{width: 100%;  height: 1600px; background: #ffffff;}
 .main_info .info { width: 15%; height: inherit;  float: left; border-right: 1px #999 solid}
 .main_info .info ul {margin-top: 20px;}
 .main_info .info ul .check{ background: #333; }
@@ -27,6 +26,39 @@ body{ background: url(../images/bg.jpg) fixed center center; background-size: 10
 .main_info .info ul li:hover{background: #333; }
 
 .main_info .content { width: 59%; height: inherit;  float: left;}
+.main_info .content .write{ width: 93%; border:1px solid #ccc;  height: 150px; margin:20px auto; border-radius: 10px; box-shadow: 1px 2px 5px #DDDCDC;}
+.main_info .content .write h5{ height: 30px; line-height: 30px; text-indent: 20px; color: #C9B010}
+.main_info .content .write  textarea{font-style: normal; width: 59%; min-width: 59% ; max-width:59%;float: left; height: 50%; min-height:50%; max-height: 50%; margin-left: 10px;}
+.main_info .content .write>span{width: 12.5%; border: 1px solid #ccc; display: inline-block; text-align: center; float: left; height: 50%; background: #BCE0F7;border-left: none; cursor: pointer;}
+.main_info .content .write  em{ background:url(../images/icon/camere.png) 10px -91px no-repeat ; width: 50%;   height: 70%; display: inline-block; margin-top:10px;   }
+.main_info .content .write  .vedio em { background:url(../images/icon/camere.png) 10px 0px no-repeat ;}
+.main_info .content .write  .music em { background:url(../images/icon/camere.png) 10px -48px no-repeat ;}
+.main_info .content .write p span{float:  right;width: 50px; height: 30px; line-height: 30px; display: inline-block; background: #C9B010 ; text-align: center; color:#ffffff; padding: 0 10px; margin: 5px 10px; border-radius: 5px; cursor: pointer; }
+.main_info .content  .write p span:hover{ background: #F3D425}
+
+.content  .main{ width: 96%; padding:0 2%;height:auto}
+.content  .main dl{ float: left; border: 1px solid #ccc; width: 96%; padding:2%; border-radius: 5px;}
+.content  .main dl dt{ height: auto;}
+.content  .main dl dt p{font-size: 20px; color: #999; text-indent: 20px; height: 30px; line-height: 30px ;font-size: 16px;}
+.content  .main dl dt p .title{ font-weight:bold; font-size: 20px;}
+.content  .main dl dt .name{ height: 40px; line-height: 40px; color:#C9B010; font-weight: bold;}
+.content  .main dl dd{width: 100% ;text-align: center;height: 400px; overflow: hidden;}
+.content  .main dl dd img{width: 90%;}
+.content  .main dl ul {width: 70%; float: left; margin-top: 15px;}
+.content  .main dl ul li {float: left; margin-left: 10px; width: 20%;  border-radius: 4px; text-align: center; background: #B1B1B1; padding: 3px 0 ; }
+.content  .main dl ul li  a{color: #fff}
+
+.content  .main dl .label{  background:url(../images/icon/love.png) 20px 20px no-repeat ; width: 40px;display: inline-block; height: 40px; float: left}
+.content  .main dl {margin: 10px 0;}
+.content  .main dl .buttom {  width: 65%; float: left;}
+.content  .main dl .buttom span{ width: 40px;height: 40px; background: #cccccc; display: inline-block;  border-radius: 4px; margin-top : 10px; margin-right: 10px; cursor: pointer;} 
+.content  .main dl .buttom span:hover{background-color:#C9B010;}
+.content  .main dl .buttom .zan{ background:  #cccccc url(../images/icon/tool.png) 10px -99px no-repeat ;}
+.content  .main dl .buttom .notzan{ background:  #cccccc url(../images/icon/tool.png) 10px -128px no-repeat ;}
+.content  .main dl .buttom .love{ background:  #cccccc url(../images/icon/tool.png) 10px -221px no-repeat ;}
+.content  .main dl .buttom .comment{ background:  #cccccc url(../images/icon/tool.png) 10px -187px no-repeat ;}
+/*分享*/
+.bshare-custom{width: 35%;float: left; margin-top: 30px;}
 
 
 .main_info .tag { width: 24%; height: inherit;   float: left; border-left: 1px solid #999;padding-left: 1%}
